envio de email e outras refatoracoes
